[gd_scene load_steps=9 format=3 uid="uid://c5755ikt1dvgo"]

[ext_resource type="Texture2D" uid="uid://c78wcrmfwakj1" path="res://assets/UI/bleed_icon.png" id="1_4m43n"]
[ext_resource type="Script" uid="uid://dbvyf56qr3lq8" path="res://scripts/core/effect_tracking.gd" id="1_u45nq"]
[ext_resource type="FontFile" uid="uid://c561w64ckwf0d" path="res://assets/fonts/Oswald-Medium.ttf" id="2_u45nq"]
[ext_resource type="Texture2D" uid="uid://2h5rhnyw7i2a" path="res://assets/UI/replen_icon.png" id="3_4xy7k"]
[ext_resource type="Texture2D" uid="uid://gq6r7lo0p67p" path="res://assets/UI/regen_icon.png" id="4_3tp1e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ynpm7"]
texture = ExtResource("1_4m43n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6kywv"]
texture = ExtResource("3_4xy7k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gsf64"]
texture = ExtResource("4_3tp1e")

[node name="Effect_Tracking" type="Control"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1089.0
offset_bottom = -2466.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u45nq")

[node name="Bleed_counter" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ynpm7")

[node name="bleed_counter_label" type="Label" parent="Bleed_counter"]
texture_filter = 1
layout_mode = 0
offset_right = 50.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("2_u45nq")
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Replen_counter" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(80, 75)
layout_mode = 0
offset_left = -1.0
offset_right = 79.0
offset_bottom = 84.0
theme_override_styles/panel = SubResource("StyleBoxTexture_6kywv")

[node name="replen_counter_label" type="Label" parent="Replen_counter"]
texture_filter = 1
layout_mode = 0
offset_right = 79.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("2_u45nq")
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Regen_counter" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(75, 85)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxTexture_gsf64")

[node name="regen_counter_label" type="Label" parent="Regen_counter"]
texture_filter = 1
layout_mode = 0
offset_right = 77.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("2_u45nq")
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1
vertical_alignment = 1
